<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient"
    android:theme="@style/Theme.Design.NoActionBar"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="80dp"
            app:srcCompat="@drawable/logo_back" />

        <Button
            android:id="@+id/bsignup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/signupstyle"
            android:text="Sign Up"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="16dp"
            tools:text="@string/bsignup" />

        <TextView
            android:id="@+id/main_txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="Already have a Path account ? "
            android:textColor="#ffdbdbdb"
            android:textSize="15dp"
            tools:text="@string/main_txt1" />

        <Button
            android:id="@+id/blogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginstyle"
            android:text="Log In"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="16dp"
            tools:text="@string/blogin" />

        <TextView
            android:id="@+id/main_txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="By using Path, you agree to Path's"
            android:textColor="#ffdbdbdb"
            android:textSize="15dp"
            tools:text="@string/main_txt2" />

        <TextView
            android:id="@+id/main_txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="Terms of Use and Privacy Policy"
            android:textColor="#ffdbdbdb"
            android:textSize="15dp"
            tools:text="@string/main_txt3" />
    </LinearLayout>

</RelativeLayout>